--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
+@media only screen and (max-width: 991px) and (min-width: 769px) {
+  * {
+    margin: 0 50px;
+  }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 576px) {
+  * {
+    margin: 0 20px;
+  }
+}
+
+* {
+  margin: 0 10px;
+}
+
 body {
   margin: 0;
-  font-family: 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
