--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-@media only screen and (max-width: 991px) and (min-width: 769px) {
-  * {
-    margin: 0 50px;
-  }
+* {
+  margin: 0 10px;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 576px) {
@@ -12,8 +10,10 @@
   }
 }
 
-* {
-  margin: 0 10px;
+@media only screen and (min-width: 769px) {
+  * {
+    margin: 0 40px;
+  }
 }
 
 body {
