--- a/client/src/components/Map.module.css
+++ b/client/src/components/Map.module.css
@@ -1,7 +1,6 @@
 .map {
-    width: 100%;
-    height: 20rem;
-    margin: 0 0 1rem 0;
-    border-radius: 0.5rem;
-    
+  width: 95vw;
+  height: 75vh;
+  margin: 5vh auto;
+  border-radius: 0.5rem;
 }
